--- a/PRACT4/Views/Home/Index.cshtml
+++ b/PRACT4/Views/Home/Index.cshtml
@@ -2,7 +2,52 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div id="calendar"></div>
+
+@section Scripts{
+    <script src="~/lib/fullcalendar-6.1.17/dist/index.global.min.js"></script>
+    <script src="~/lib/fullcalendar-6.1.17/packages/google-calendar/index.global.min.js"></script>
+    <script src="~/lib/fullcalendar-6.1.17/packages/core/locales/es.global.js"></script>
+    <script src="~/lib/fullcalendar-6.1.17/packages/interaction/index.global.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function(){
+            const calendarEl = document.getElementById('calendar');
+
+            const calendar = new FullCalendar.Calendar(calendarEl, {
+                initialView: 'dayGridMonth',
+                timeZone: 'America/El_Salvador',
+                events: 'Eventos/GetEventos',
+                dayMaxEvents :true,
+                navLinks:true,
+                editable:true,
+                slotLabelFormat: {
+                    hour : 'numeric',
+                    minute: '2-digit',
+                    meridiem: 'short',
+                    hour12: true,
+                },
+                eventTimeFormat: {
+                    hour : 'numeric',
+                    minute: '2-digit',
+                    meridiem: 'short',
+                    hour12: true,
+                },
+                locale: 'es',
+                headerToolbar: {
+                    left: 'prev,next today',
+                    center: 'title',
+                    right: 'dayGridMonth,timeGridWeek,timeGridDay'
+                },
+                buttonText: {
+                    today: 'Hoy',
+                    month: 'Mes',
+                    week: 'Semana',
+                    list: 'Lista'
+                }
+            });
+
+            calendar.render();
+        })
+    </script>
+}
